Entrega TP 2 Programación Estructurada

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,29 @@
 /TP 1 Introduccion a Java/Caracteres_Escape/build/
 /TP 1 Introduccion a Java/Division/nbproject/private/
 /TP 1 Introduccion a Java/Division/build/
+/TP 2 Programacion Estructurada/Anio_Bisiesto/nbproject/private/
+/TP 2 Programacion Estructurada/Anio_Bisiesto/build/
+/TP 2 Programacion Estructurada/mayor_de_tres/nbproject/private/
+/TP 2 Programacion Estructurada/mayor_de_tres/build/
+/TP 2 Programacion Estructurada/Clasificacion_Edad/nbproject/private/
+/TP 2 Programacion Estructurada/Clasificacion_Edad/build/
+/TP 2 Programacion Estructurada/Calculadora_De_Descuentos/nbproject/private/
+/TP 2 Programacion Estructurada/Calculadora_De_Descuentos/build/
+/TP 2 Programacion Estructurada/Suma_numeros_pares/nbproject/private/
+/TP 2 Programacion Estructurada/Suma_numeros_pares/build/
+/TP 2 Programacion Estructurada/Contador_Pos_Neg_y_Cero/nbproject/private/
+/TP 2 Programacion Estructurada/Contador_Pos_Neg_y_Cero/build/
+/TP 2 Programacion Estructurada/Validacion_de_notas/nbproject/private/
+/TP 2 Programacion Estructurada/Validacion_de_notas/build/
+/TP 2 Programacion Estructurada/Calcular_Precio_Final_8/nbproject/private/
+/TP 2 Programacion Estructurada/Calcular_Precio_Final_8/build/
+/TP 2 Programacion Estructurada/Costo_de_Envio/nbproject/private/
+/TP 2 Programacion Estructurada/Costo_de_Envio/build/
+/TP 2 Programacion Estructurada/Actualizacion_de_Stock/nbproject/private/
+/TP 2 Programacion Estructurada/Actualizacion_de_Stock/build/
+/TP 2 Programacion Estructurada/descuento_Variable_Global/nbproject/private/
+/TP 2 Programacion Estructurada/descuento_Variable_Global/build/
+/TP 2 Programacion Estructurada/Modificaciones_de_Arrays/nbproject/private/
+/TP 2 Programacion Estructurada/Modificaciones_de_Arrays/build/
+/TP 2 Programacion Estructurada/Modificaciones_Arrays_Rec/nbproject/private/
+/TP 2 Programacion Estructurada/Modificaciones_Arrays_Rec/build/
