Entrega TP 3 Programacion Orientada a Objetos

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@
 /TP 2 Programacion Estructurada/Modificaciones_de_Arrays/build/
 /TP 2 Programacion Estructurada/Modificaciones_Arrays_Rec/nbproject/private/
 /TP 2 Programacion Estructurada/Modificaciones_Arrays_Rec/build/
+/TP 3 POO/estudiante/nbproject/private/
+/TP 3 POO/estudiante/build/
+/TP 3 POO/Mascotas/nbproject/private/
+/TP 3 POO/Mascotas/build/
+/TP 3 POO/Libro/nbproject/private/
+/TP 3 POO/Libro/build/
+/TP 3 POO/Gallinas/nbproject/private/
+/TP 3 POO/Gallinas/build/
+/TP 3 POO/NaveEspacial/nbproject/private/
+/TP 3 POO/NaveEspacial/build/
