Entrega TP4 Programacion Orientada a Objetos II

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@
 /TP 3 POO/Gallinas/build/
 /TP 3 POO/NaveEspacial/nbproject/private/
 /TP 3 POO/NaveEspacial/build/
+/TP4 POO/Sistema_Gestion_Empleados/nbproject/private/
+/TP4 POO/Sistema_Gestion_Empleados/build/
+/TP4 POO/Sistema_Gestion_Empleados/dist/
