Enrega TP 6 Colecciones y Sistema de Stock

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@
 /TP5 RELACIONES UML 1 A 1/GeneradorQR_Usuario_CodigoQR_1_13/build/
 /TP5 RELACIONES UML 1 A 1/Editor_Proyecto_Render_1_14/nbproject/private/
 /TP5 RELACIONES UML 1 A 1/Editor_Proyecto_Render_1_14/build/
+/TP6 COLECCIONES/SistemaDeStock/nbproject/private/
+/TP6 COLECCIONES/SistemaDeStock/build/
+/TP6 COLECCIONES/Biblioteca_TP6/nbproject/private/
+/TP6 COLECCIONES/Biblioteca_TP6/build/
+/TP6 COLECCIONES/Sistema_Academico/nbproject/private/
+/TP6 COLECCIONES/Sistema_Academico/build/
