Entrega TP 7 Herencia y Polimorfismo

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,13 @@
 /TP6 COLECCIONES/Biblioteca_TP6/build/
 /TP6 COLECCIONES/Sistema_Academico/nbproject/private/
 /TP6 COLECCIONES/Sistema_Academico/build/
+/TP7 HERENCIA Y POLIMORFISMO/Vehiculos_herencia_basica/nbproject/private/
+/TP7 HERENCIA Y POLIMORFISMO/Vehiculos_herencia_basica/build/
+/TP7 HERENCIA Y POLIMORFISMO/Figuras_Geometricas/nbproject/private/
+/TP7 HERENCIA Y POLIMORFISMO/Figuras_Geometricas/build/
+/TP7 HERENCIA Y POLIMORFISMO/Empleados_Polimorfismo/nbproject/private/
+/TP7 HERENCIA Y POLIMORFISMO/Empleados_Polimorfismo/build/
+/TP7 HERENCIA Y POLIMORFISMO/Animales_y_Comportamiento/nbproject/private/
+/TP7 HERENCIA Y POLIMORFISMO/Animales_y_Comportamiento/build/
+/TP7 HERENCIA Y POLIMORFISMO/Sistema_de_Pagos/nbproject/private/
+/TP7 HERENCIA Y POLIMORFISMO/Sistema_de_Pagos/build/
