Entrega TP 8 interfaces y Excepciones

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,19 @@
 /TP7 HERENCIA Y POLIMORFISMO/Animales_y_Comportamiento/build/
 /TP7 HERENCIA Y POLIMORFISMO/Sistema_de_Pagos/nbproject/private/
 /TP7 HERENCIA Y POLIMORFISMO/Sistema_de_Pagos/build/
+/TP8 INTERFACES Y EXCEPCIONES/E_Commerce/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/E_Commerce/build/
+/TP8 INTERFACES Y EXCEPCIONES/Excepciones/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/Excepciones/build/
+/TP8 INTERFACES Y EXCEPCIONES/Excepciones/dist/
+/TP8 INTERFACES Y EXCEPCIONES/Division_Segura/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/Division_Segura/build/
+/TP8 INTERFACES Y EXCEPCIONES/Division_Segura/dist/
+/TP8 INTERFACES Y EXCEPCIONES/Conversion_Cadena_Numero/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/Conversion_Cadena_Numero/build/
+/TP8 INTERFACES Y EXCEPCIONES/Lectura_Archivo/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/Lectura_Archivo/build/
+/TP8 INTERFACES Y EXCEPCIONES/Excepcion_Personalizada/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/Excepcion_Personalizada/build/
+/TP8 INTERFACES Y EXCEPCIONES/Try-With-Resources/nbproject/private/
+/TP8 INTERFACES Y EXCEPCIONES/Try-With-Resources/build/
